--- a/Assets/Resume.css
+++ b/Assets/Resume.css
@@ -8,6 +8,21 @@ body {
     right: 0;
     position: fixed;
 }
+a:visited {
+    color: white;
+    background-color: transparent;
+    text-decoration: none;
+}
+a:hover {
+    color: white;
+    background-color: transparent;
+    text-decoration: none;
+}
+a:active {
+    color: antiquewhite;
+    background-color: transparent;
+    text-decoration: none;
+}
 .header_button {
     border: none;
     color: white;
